@@ -1,3 +1,4 @@
+7/23/12 rename nodes for interactive equations
 # 0.00.21 (65997) Jul 18, 2012
 7/18/12 tweak game reward parameters
 7/18/12 add images of simplified equations to game reward
